--- a/public/modelos/misterchef/index.html
+++ b/public/modelos/misterchef/index.html
@@ -1,1 +1,5 @@
-<iframe src="https://dev.mistercheff.com.br/portal/" style="width: 100%;min-height: 600px;" class=" mb-4" frameborder="0"></iframe>
+<iframe src="https://dev.mistercheff.com.br/portal/" style="width: 100%;min-height: 700px;" class=" mb-4" frameborder="0"></iframe>
+
+<style>
+    #frame { zoom: 0.70; -moz-transform: scale(0.70); -moz-transform-origin: 0 0; }
+</style>
