--- a/public/modelos/mensagens/index.html
+++ b/public/modelos/mensagens/index.html
@@ -1,1 +1,57 @@
-<h1>Mensagens</h1>
+<div class="container ">
+    <div class="card-body"><h4>Configuração Bot whatsapp</h4>
+    </div>
+</div>
+<div class="mt-4 mb-4 container card card-body">
+    <div class="container row">
+        <div class="form-check form-switch  col-md-6">
+          <input checked class="form-check-input" type="checkbox" role="switch" id="notificarnovaMensagem">
+          <label class="form-check-label" for="notificarnovaMensagem">Notificar nova mensagem no whatsapp</label>
+        </div>  
+
+        <div class="form-check form-switch  col-md-6">
+            <input checked class="form-check-input" type="checkbox" role="switch" id="solicitarnotafiscal">
+            <label class="form-check-label" for="solicitarnotafiscal">Notificar no painel quando o cliente solicitar nota fistal </label>
+        </div> 
+
+        <div class="form-check form-switch  col-md-6">
+            <input checked class="form-check-input" type="checkbox" role="switch" id="pedidoerradonotificar">
+            <label class="form-check-label" for="pedidoerradonotificar">Notificar quando cliente informar pedido errado? </label>
+        </div> 
+        <div class="form-check form-switch  col-md-6">
+            <input checked class="form-check-input" type="checkbox" role="switch" id="notificarobs">
+            <label class="form-check-label" for="notificarobs">Receber notificação quando cliente informar uma notificação </label>
+        </div> 
+
+        <div class="form-check form-switch  col-md-6">
+            <input  class="form-check-input" type="checkbox" role="switch" id="nps">
+            <label class="form-check-label" for="nps">Enviar pesquisa NPS </label>
+        </div> 
+
+        <div class="form-check form-switch  col-md-6">
+          <input checked class="form-check-input" type="checkbox" role="switch" id="ativar">
+          <label class="form-check-label" for="ativar">Ativar Boot</label>
+        </div>    
+
+        <div class="form-check form-switch  col-md-6">
+            <input checked class="form-check-input" type="checkbox" role="switch" id="horario">
+            <label class="form-check-label" for="horario">Notificar fora do horário de Atendimento</label>
+        </div>    
+
+        <div class="form-check form-switch  col-md-6">
+            <input  class="form-check-input" type="checkbox" role="switch" id="status">
+            <label class="form-check-label" for="status">Notificar alteração de status de pedido </label>
+        </div> 
+
+        <div class="form-check form-switch  col-md-6">
+            <input  class="form-check-input" type="checkbox" role="switch" id="saudacao">
+            <label class="form-check-label" for="saudacao">Mensagem de saudação </label>
+        </div> 
+
+        <div class="form-check form-switch  col-md-6">
+            <input checked class="form-check-input" type="checkbox" role="switch" id="intencao">
+            <label class="form-check-label" for="intencao">Pergunta quando o bot não tem certeza da intenção da resposta </label>
+        </div> 
+
+    </div>
+</div>
