--- a/public/paginas/login/index.html
+++ b/public/paginas/login/index.html
@@ -16,15 +16,17 @@
                         <div class="col-lg-6">
                             <div class="p-5">
                                 <div class="text-center">
-                                    <span class="h4 mt-4 mb-4 card-body"> LOGIN </span>
+                                    <span class="h4 mt-4 mb-4 card-body"> 
+                                    <img width="50px" src="https://dev.mistercheff.com.br/portal/images/logo_mistercheff.png" alt="mistercheff">    
+                                    </span>
                                 </div>
                                 <form class="user mt-4">
                                     <div class="form-group">
                                         <input type="email" class="form-control form-control-user" id="email"
                                             aria-describedby="emailHelp" placeholder="Token">
                                     </div>
-                                    <div class="form-group">
-                                        <input hidden type="password" class="form-control form-control-user" id="senha"
+                                    <div hidden class="form-group">
+                                        <input  type="password" class="form-control form-control-user" id="senha"
                                             placeholder="Senha" value="123">
                                     </div>
                                     <div class="form-group">
@@ -46,7 +48,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
 
     </div>
